[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clevertouch"
version = "0.1.2"
authors = [
  { name="hemphen", email="michael.hemph@gmail.com" },
]
description = "API for interacting with Touch E3 smart device controllers via CleverTouch cloud accounts"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hemphen/clevertouch"
"Bug Tracker" = "https://github.com/hemphen/clevertouch/issues"
