[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.1",
    "pytest>=7.2.1",
    "pytest-asyncio>=0.20.3",
    "python-dotenv>=0.21.1",
]

[project]
name = "clevertouch"
version = "0.1.4"
description = "API for interacting with Touch E3 smart device controllers via CleverTouch cloud accounts"
authors = [
    {name = "hemphen", email = "michael.hemph@gmail.com"},
]
dependencies = [
    "aiohttp~=3.8.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
