[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.1",
    "pytest>=7.2.1",
    "pytest-asyncio>=0.20.3",
    "python-dotenv>=0.21.1",
    "black>=22.12.0",
]

[project]
name = "clevertouch"
version = "0.5.0"
description = "A Python API for interacting with LVI/Purmo Touch E3-connected radiators"
keywords = [
    "LVI", 
    "home automation", 
    "heating"
]
authors = [
    {name = "hemphen", email = "michael.hemph@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.8.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
"Source Code" = "https://github.com/hemphen/clevertouch"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "DEBUG"
